# C_Programming

./: 13_08_2020.c  CMakeLists.txt  Q15.c  Quiz_problem_one.c  Quiz_problem_two.c  accessing_array_values_and_address_pointer.c  adding_two_tables_of_numbers.c  area_program.c  c_10_24_2019.c  call_by_reference_swapping.c  divisibility.c  factorial.c  factorial_pointer.c  function_returning_pointer.c  g_test_13_08_2020.c  initializing_2d_array.c  main.c  minimum_bits_to_store_integer.c  nested_ternary_operator.c  pass_2d_array.c  passing_entire_array_to_function.c  piglatin_generator.c  pointer_learning_1.c  pointer_testing.c  pointers_and_2d_array.c  print_alphabets_pointers.c  problem16.c  reordering_a_list_of_numbers.c  reordering_a_list_of_string.c  reverse_string_pointer.c  sort_using_pointer.c  string_permutation.c  strings_and_pointers.c  sum_of_array_pointers.c  swaping.c  two_dimensional_arrays.c  vowels_consonents.c
