cmake_minimum_required(VERSION 3.16)
project(classTest C)

set(CMAKE_C_STANDARD 11)

add_executable(classTest main.c)
add_executable(problem2 divisibility.c)
add_executable(problem3 swaping.c)
add_executable(problem4 call_by_reference_swapping.c)
add_executable(problem5 area_program.c)
add_executable(problem6 number_of_vowels_consonents.c)
add_executable(problem7 pointer_testing.c)
add_executable(problem8 pointer_learning_1.c)
add_executable(problem9 accessing_array_values_and_address_pointer.c)
add_executable(problem10 passing_entire_array_to_function.c)
add_executable(problem11 strings_and_pointers.c)
add_executable(problem12 two_dimensional_arrays.c)
add_executable(problem13 initializing_2d_array.c)
add_executable(problem14 pointers_and_2d_array.c)
add_executable(problem15 pass_2d_array.c)
add_executable(problem16 problem16.c)
add_executable(problem17 reordering_a_list_of_numbers.c)
add_executable(problem18 reverse_string_pointer.c)
add_executable(problem19 print_alphabets_pointers.c)
target_link_libraries(problem2 m)
target_link_libraries(problem3 m)