cmake_minimum_required(VERSION 3.16)
project(classTest C)

set(CMAKE_C_STANDARD 11)

add_executable(classTest main.c)
add_executable(problem2 divisibility.c)
add_executable(problem3 swaping.c)
add_executable(problem4 call_by_reference_swapping.c)
add_executable(problem5 area_program.c)
add_executable(problem6 number_of_vowels_consonents.c)
add_executable(problem7 pointer_testing.c)
add_executable(problem8 pointer_learning_1.c)
add_executable(problem9 accessing_array_values_and_address_pointer.c)
add_executable(problem10 passing_entire_array_to_function.c)
add_executable(problem11 strings_and_pointers.c)
add_executable(problem12 two_dimensional_arrays.c)
add_executable(problem13 initializing_2d_array.c)
add_executable(problem14 pointers_and_2d_array.c)
add_executable(problem15 pass_2d_array.c)
add_executable(problem16 problem16.c)
add_executable(problem17 reordering_a_list_of_numbers.c)
add_executable(problem18 reverse_string_pointer.c)
add_executable(problem19 print_alphabets_pointers.c)
add_executable(problem20 sum_of_array_pointers.c)
add_executable(problem21 function_returning_pointer.c)
add_executable(problem22 sort_using_pointer.c)
add_executable(problem23 factorial_pointer.c)
add_executable(problem24 vowels_consonents.c)
add_executable(problem25 string_permutation.c)
add_executable(problem26 adding_two_tables_of_numbers.c)
add_executable(problem27 reordering_a_list_of_string.c)
add_executable(problem28 piglatin_generator.c)
add_executable(problem29 piglatin_generator_new.c)
add_executable(problem30 Quiz_problem_one.c)
add_executable(problem31 Quiz_problem_two.c)
add_executable(problem32 nested_ternary_operator.c)
add_executable(problem33 c_10_24_2019.c)
add_executable(problem34 minimum_bits_to_store_integer.c)
add_executable(problem35 Q15.c)
add_executable(problem36 13_08_2020.c)
target_link_libraries(problem2 m)
target_link_libraries(problem3 m)
target_link_libraries(problem30 m)
target_link_libraries(problem31 m)
target_link_libraries(problem35 m)
target_link_libraries(problem36 m)